--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Configure
         # TODO: change dir in bat file
         #run: "external/MOSA-Project/Source/Compile.bat"
-        run: "./Source/Compile.bat"
+        run: "./Compile.bat"
         working-directory: external/MOSA-Project/Source
       - name: Build
         run: msbuild src/Abanu.sln /p:Configuration=Debug -Verbosity:minimal
