--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,41 @@
-name: Greet Everyone
+name: Abanu Testing
 # This workflow is triggered on pushes to the repository.
 on: [push]
 
 jobs:
-  build:
-    # Job name is Greeting
-    name: Greeting
-    # This job runs on Linux
-    runs-on: ubuntu-latest
+  build-unix:
+    name: Linux Test
+    runs-on: ubuntu-18.04
     steps:
-      # This step uses GitHub's hello-world-javascript-action: https://github.com/actions/hello-world-javascript-action
-      - name: Hello world
-        uses: actions/hello-world-javascript-action@v1
+      - uses: actions/checkout@v1
+      - name: Update Package respository
+        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
+      - name: Install Packages
+        run: sudo apt-get install -y --no-install-recommends git wget nasm qemu-system-x86 mtools xorriso grub-common grub-pc-bin grub-efi-amd64-bin grub-efi-ia32-bin
+      - name: Set Permissions
+        run: chmod +x $GITHUB_WORKSPACE/abctl
+      - name: Configure
+        run: $GITHUB_WORKSPACE/abctl configure cloud-test
+      - name: Build
+        run: $GITHUB_WORKSPACE/abctl build all
+      - name: Test
+        run: $GITHUB_WORKSPACE/abctl test cloud
+  build-mswin:
+    name: Windows Test
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v1
         with:
-          who-to-greet: 'Mona the Octocat'
-        id: hello
-      # This step prints an output (time) from the previous step's action.
-      - name: Echo the greeting's time
-        run: echo 'The time was ${{ steps.hello.outputs.time }}.'
+          submodules: recursive      
+      #- uses: crazy-max/ghaction-chocolatey@v1
+      - name: Configure
+        # TODO: change dir in bat file
+        #run: "external/MOSA-Project/Source/Compile.bat"
+        run: "./Compile.bat"
+        working-directory: external/MOSA-Project/Source
+      - name: Build Assemblies
+        run: "./build.bat"
+      - name: Build Binaries
+        run: bin/Abanu.Tools.Build.exe build --native --bin=all --image
+      - name: Test
+        run: bin/Abanu.Tools.Build.exe run --emulator=qemu --boot=direct --test
