--- a/src/Abanu.Runtime/Abanu.Runtime.csproj
+++ b/src/Abanu.Runtime/Abanu.Runtime.csproj
@@ -76,6 +76,7 @@
     <Compile Include="FileWriter.cs" />
     <Compile Include="RuntimeAllocator.cs" />
     <Compile Include="RuntimeMemory.cs" />
+    <Compile Include="SysCalls.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
