--- a/src/Abanu.Lib/Abanu.Lib.csproj
+++ b/src/Abanu.Lib/Abanu.Lib.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Allocator.cs" />
     <Compile Include="BitConversion.cs" />
+    <Compile Include="BitReader.cs" />
     <Compile Include="BootInfoFramebufferInfo.cs" />
     <Compile Include="BufferExtensions.cs" />
     <Compile Include="CharExtensions.cs" />
