--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ jobs:
     name: Linux Test
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
       - name: Update Package respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Packages
@@ -24,7 +25,8 @@ jobs:
     name: Windows Test
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
         with:
           submodules: recursive      
       #- uses: crazy-max/ghaction-chocolatey@v1
