--- a/src/Abanu.Kernel.Core/Abanu.Kernel.Core.csproj
+++ b/src/Abanu.Kernel.Core/Abanu.Kernel.Core.csproj
@@ -61,8 +61,8 @@
     <Compile Include="Processes\Process.cs" />
     <Compile Include="Processes\ProcessCreateOptions.cs" />
     <Compile Include="Processes\ProcessManager.cs" />
-    <Compile Include="Scheduling\Uninterruptable.cs" />
-    <Compile Include="Scheduling\UninterruptableMonitor.cs" />
+    <Compile Include="Scheduling\Uninterruptible.cs" />
+    <Compile Include="Scheduling\UninterruptibleMonitor.cs" />
     <Compile Include="Syscalls\Service.cs" />
     <Compile Include="Syscalls\SysCallManager.cs" />
     <Compile Include="Tasks\BackgroundWorker.cs" />
