--- a/src/Abanu.Kernel.Api/Abanu.Kernel.Api.csproj
+++ b/src/Abanu.Kernel.Api/Abanu.Kernel.Api.csproj
@@ -48,6 +48,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AllocatePageOptions.cs" />
     <Compile Include="ConsoleServerConstants.cs" />
     <Compile Include="Drawing\CreateWindowResult.cs" />
     <Compile Include="Drawing\IFrameBuffer.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="IBufferReader.cs" />
     <Compile Include="IPageTable.cs" />
     <Compile Include="Drawing\ISurface.cs" />
+    <Compile Include="PageAllocationPool.cs" />
     <Compile Include="PageTableType.cs" />
     <Compile Include="ServiceStatus.cs" />
     <Compile Include="Drawing\SurfaceDeviceType.cs" />
