--- a/src/Abanu.Runtime/Abanu.Runtime.csproj
+++ b/src/Abanu.Runtime/Abanu.Runtime.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="RuntimeElfSection.cs" />
     <Compile Include="ConsoleClient.cs" />
     <Compile Include="MemoryAllocation.cs" />
     <Compile Include="ApplicationRuntime.cs" />
