more managed code in services

--- a/src/Abanu.Lib/Abanu.Lib.csproj
+++ b/src/Abanu.Lib/Abanu.Lib.csproj
@@ -81,6 +81,7 @@
     <Compile Include="MemoryRegionExtensions.cs" />
     <Compile Include="MessageManager.cs" />
     <Compile Include="Serial.cs" />
+    <Compile Include="StreamExtensions.cs" />
     <Compile Include="Tests\BinaryBuddyAllocator_TestImplementation.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
