first loaded c app

--- a/src/Experimenets/c-hello-world/build
+++ b/src/Experimenets/c-hello-world/build
@@ -1,3 +1,5 @@
 #!/bin/sh
 
 gcc -fPIC -m32 -gdwarf -Og -nostdlib -ffreestanding -Wl,--section-start=.text=0xA0000000 main.c -o c-hello-world.bin
+
+cp c-hello-world.bin ../../../os/
