--- a/src/Abanu.Lib/Abanu.Lib.csproj
+++ b/src/Abanu.Lib/Abanu.Lib.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ConsoleFonts\PSF1Header.cs" />
     <Compile Include="ConsoleFonts\PSF2Header.cs" />
     <Compile Include="Elf\ElfHeader.cs" />
+    <Compile Include="Elf\ElfProgramHeader.cs" />
     <Compile Include="Elf\ElfSections.cs" />
     <Compile Include="Elf\ElfSectionHeader.cs" />
     <Compile Include="Elf\ElfSymbol.cs" />
